--- a/src/index.css
+++ b/src/index.css
@@ -99,3 +99,19 @@ body {
 .animate-bounce-slow {
   animation: bounce-slow 2s infinite;
 }
+
+/* Progress Bar (Para LoadingModal) */
+@keyframes progress-bar {
+  0% {
+    transform: translateX(-100%);
+  }
+  50% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
+.animate-progress-bar {
+  animation: progress-bar 1.5s ease-in-out infinite;
+}
